--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,6 +166,19 @@ section.resume-section .resume-section-content {
     color: #c8cfd5;
 }
 
+.blog-card {
+    color: white;
+    background-color: var(--bs-indigo);
+    padding: 2rem;
+    margin: 0.1rem;
+    border-radius: 0.5rem;
+    text-decoration: none
+}
+
+.blog-card:hover {
+    color: #c8cfd5;
+}
+
 
 @media (min-width: 768px) {
     section.resume-section {
