--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,19 +23,6 @@ body {
 }
 
 h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3,
-h4,
-.h4,
-h6,
-.h6 {
-    text-transform: uppercase;
-}
-
-h1,
 .h1 {
     line-height: 1;
 }
@@ -46,8 +33,8 @@ p.lead {
 }
 
 .subheading {
-    font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    text-transform: uppercase;
+    /* font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+    /* text-transform: uppercase; */
     font-weight: 500;
     font-size: 1.5rem;
 }
@@ -60,7 +47,6 @@ p.lead {
 #sideNav .navbar-nav .nav-item .nav-link {
     font-weight: 800;
     letter-spacing: 0.05rem;
-    text-transform: uppercase;
 }
 
 #sideNav .navbar-toggler:focus {
@@ -185,7 +171,7 @@ section.resume-section .resume-section-content {
     border-color: var(--bs-indigo);
 }
 
-.pimage{
+.pimage {
     border-radius: 10px;
 }
 
