--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -232,4 +232,15 @@ section.resume-section .resume-section-content {
         padding-top: 5rem;
         padding-bottom: 5rem;
     }
+    .main-img{
+        display: none;
+    }
+}
+
+@media (max-width: 992px) {
+    .main-img {
+        max-width: 20rem;
+        max-height: 20rem;
+        margin-bottom: 20px;
+    }
 }
